--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codequest",
   "displayName": "CodeQuest",
   "description": "Dive deep into your Microsoft Dynamics NAV objects to identify and analyze references to specific ticket IDs",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "publisher": "Javith Abbas",
   "icon": "assets/codequest.png",
   "engines": {
@@ -35,6 +35,10 @@
       {
         "command": "codequest.getTicketCountbyObjects",
         "title": "CodeQuest: Get the tickets count by objects"
+      },
+      {
+        "command": "codequest.analyzedeltafiles",
+        "title": "CodeQuest: Analyze delta files"
       }
     ]
   },
